--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "react-select": "^2.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,6 +33,8 @@
     ]
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
     "prettier": "1.17.0"
   }
 }
