--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-popper": "^1.3.3",
     "react-scripts": "3.0.1",
     "react-select": "^2.4.3"
   },
